--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -361,7 +361,7 @@
  mng_appeased_the_eunuchs_modifier:0 ""
  mng_upset_eunuchs_modifier:0 ""
  mng_eunuch_continue_stripping_privileges_tt:0 ""
- gov_coastal_government:0 "Coastal Government"
+ gov_coastal_government:0 "沿岸政府"
  scaling_with_estate_influence_tt:0 "§Y影響度に比例§!\n§Y100%§!の影響度でこの特権は以下の効果を与えます："
  scaling_with_estate_loyalty_tt:0 "§Y忠誠度に比例§!\n§Y100%§!の忠誠度でこの特権は以下の効果を与えます："
  when_loyal_tt:0 "§G忠実なとき（60%以上）§!："
@@ -455,17 +455,17 @@
  civic_republicanism_focus_leaders:0 "指揮官への注力"
  civic_republicanism_focus_quality:0 "軍質への注力"
  civic_republicanism_focus_naval:0 "海軍への注力"
- eased_war_contributions:0 "Eased War Contributions"
- removed_estates_from_power:0 "Removed Estates from Power"
- overhauling_the_court:0 "Court Overhaul"
+ eased_war_contributions:0 "戦争協力の緩和"
+ removed_estates_from_power:0 "権力の座から外された階級"
+ overhauling_the_court:0 "宮廷刷新"
  rise_of_the_ottomans:0 "オスマンの台頭"
- zenith_of_the_ottomans:0 "Zenith of the Ottomans"
- twilight_of_the_ottomans:0 "Twilight of the Ottomans"
- decline_of_the_ottomans:0 "Stagnation of the Ottomans"
- kor_expanded_capital:0 "The Great City"
- rus_western_military_tactics:0 "Western Military Tactics"
- eng_reformer_ruler_for_catholic_gb:0 "Heretic Monarch"
- eng_catholic_ruler_for_reformed_gb:0 "Lap Dog of the Pope"
+ zenith_of_the_ottomans:0 "オスマンの絶頂"
+ twilight_of_the_ottomans:0 "オスマンの黄昏"
+ decline_of_the_ottomans:0 "オスマンの停滞"
+ kor_expanded_capital:0 "偉大な都市"
+ rus_western_military_tactics:0 "西洋の軍事戦術"
+ eng_reformer_ruler_for_catholic_gb:0 "異端君主"
+ eng_catholic_ruler_for_reformed_gb:0 "教皇の腰ぎんちゃく"
  desc_aristocratic_rule_act:0 ""
  desc_plutocratic_rule_act:0 ""
  desc_theocratic_rule_act:0 ""
@@ -523,7 +523,7 @@
  defender_of_faith_4_DESC:0 ""
  defender_of_faith_5:0 ""
  defender_of_faith_5_DESC:0 ""
- random_new_world_region:0 "New World's Ocean"
+ random_new_world_region:0 "新世界の大海原"
  make_dummy:0 ""
  make_dummy_desc:0 ""
  CB_ALLOWED_make_dummy:0 ""
