--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1132,7 +1132,7 @@
  flavor_rus.EVTOPTB3405:0 "それは我々の外交を危険に晒すだろう。"
  flavor_rus.EVTNAME3406:0 "草原へのロシアの請求権"
  flavor_rus.EVTDESC3406:0 "アストラハンの陥落直後の、1557年にイヴァン4世は、モンゴル人の後継者であるカザン南部の大草原であるノガイ・オルダの領土で作戦を開始した。これは東方への拡大のための最初の一歩であった。東方へのロシアの拡大は、1550年から1581年にかけてイェルマークの配下のコサックによって行われ、ニジニ・ノヴゴロドのストロガノフ家の商人たちの民間事業は、多くの土地がロシア皇帝の支配下に落ちていくのを経験した。1584年のシビル・ハン国の征服とシベリアのチンギス・ハーンの後継者の最後の領土の破壊は、広大な後背地の短剣と支配の前の最後の段階であり、最終的には、コサックがそのオストログ（輸送を確保する単純な要塞）の外に都市を建設し、1645年にオホーツクで太平洋に到達するのを見ることになった。"
- flavor_rus.EVTOPTA3406:0 "それらはすべての母、ロシアに属する。"
+ flavor_rus.EVTOPTA3406:0 "それらはすべて母なるロシアに属する。"
  flavor_rus.EVTOPTB3406:0 "それは我々の外交を危険に晒すだろう。"
  flavor_rus.EVTNAME3410:0 "選抜会議"
  flavor_rus.EVTDESC3410:0 "1543年、わずか14歳で、驚くべき力と勇気を持って、偉大な君主イヴァン4世はボヤールの恐怖の統治を終わらせた。彼の背後には、友人であるアレクセイ・アダシェフと、賢明なマカリイからモスクワ府主教を受継いだ、才能豊かなシリヴェーストルがいた。シリヴェーストルとアダシェフは選抜会議と呼ばれた顧問の集団に所属しており、イヴァン4世の治世の初期には、ロシアの改革の大きな助けとなったが、イヴァンの最初の妻アナスタシアが1560年に死亡したことを受けて、その支持を失った。1553年に重い病気の後、精神的に不安定になったイヴァンは、妻を毒殺したとして古い友人を非難して彼らを追放し、彼の残虐性を抑える者は誰もいなくなった。"
