--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -836,7 +836,7 @@
  EVTDESC727:1 "領域内の誰もが[enemy_country.GetUsableName]との戦争の後ろで団結している。彼らはそれが我々が勝たなければならない戦いであると感じており、すべてが[Root.GetUsableName]のために彼らの役割を果たしている。"
  EVTNAME1001:0 "ロシアの国家"
  EVTDESC1001:0 "征服と外交を通して、ロシアは単なる開拓地から支配的な公国へと変容した。いくつかの東方遠征の後、最終的にモンゴルの遊牧民たちは抑圧され、ツァーリの君主の支配下にある中央集権的なロシアの国家が出現している。西ヨーロッパからの影響は我々の近代化と国家の改革を助け、西洋式の教育が採用されている。"
- EVTOPTA1001:0 "それはすべて、母なるロシアに属する"
+ EVTOPTA1001:0 "それらはすべて母なるロシアに属する。"
  EVTOPTB1001:0 "母なるロシアは待つことができる"
  EVTNAME1002:0 "オランダの国家"
  EVTDESC1002:0 "オランダは、ヨーロッパの最も有能な海軍と植民地大国の一つとして浮上している。地方及び海外での有利な交易の機会は、結果として、世界で最初となる資本家の国家の一つへと迅速な進化をもたらしている。"
@@ -2605,7 +2605,7 @@
  EVTNAME6421:0 "良質な羊毛"
  EVTDESC6421:0 "最近出荷された羊毛は比類なき品質で、追加収入を得ることができた。"
  EVTOPTA6421:0 "どんなにカネがあっても多すぎることはない。"
- EVTNAME6422:0 "粗末な制服"
+ EVTNAME6422:0 "質の悪い軍服"
  EVTDESC6422:0 "ある布地業者が軍服に標準以下の布地を供給していることが発覚しました。聞くところによると、兵たちはこの事に感心はしていません。"
  EVTOPTA6422:0 "クソッタレめ！"
  EVTNAME6423:0 "たくましい船員たち"
