--- a/source/localisation/government_names_l_english.yml
+++ b/source/localisation/government_names_l_english.yml
@@ -32,7 +32,7 @@
  KHATUN:0 "ハトゥン"
  KHANUM:0 "ハヌム"
  KHANZADEH:0 "ハンザデー"
- GREAT_KHAN:0 "大ハン"
+ GREAT_KHAN:0 "大ハーン"
  GREAT_KHATUN:0 "大ハトゥン"
  KHAGANATE:0 "カガン国"
  KHAGAN:0 "カガン"
