--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -1231,12 +1231,12 @@
  horse_supplies_desc:0 "戦争は兵士よりも、馬にとってより困難である。我々は、我々の恐るべき騎兵が十分に維持されていることを確認する必要がある。我々は、軍隊を強く、より安くするために、常に十分な馬を確保する必要がある。"
  steppe_leaders:0 "ステップの指揮官"
  steppe_leaders_desc:0 "古い狩猟の伝統を維持することによって、我々の軍隊は戦闘における馬の利用を理解している人々により導かれることを確実にする。これはより良い指導力をもたらすだろう。"
- traditions_of_the_great_khan:0 "偉大なハンの伝統"
- traditions_of_the_great_khan_desc:0 "偉大なハンは、彼の騎兵の恐怖と彼の強い野望により世界を震え上がらせた。これらの伝統を取り戻し、我々も軍隊を世界が震え上がるようなものとしなければならない。"
+ traditions_of_the_great_khan:0 "大ハーンの伝統"
+ traditions_of_the_great_khan_desc:0 "大ハーンは、彼の騎兵の恐怖と彼の強い野望により世界を震え上がらせた。これらの伝統を取り戻し、我々も軍隊を世界が震え上がるようなものとしなければならない。"
  tradition_of_conquest:0 "征服の伝統"
  tradition_of_conquest_desc:0 "人々を征服するのは難しい任務であり、誰もが我々の啓蒙された政府への準備ができているわけではない。それでも、我々は人々を我々の帝国に連れて来るため、骸骨の山を築くよりも簡単な方法があることを発見した。それは、我々の祖先が決して学ぶことのなかったものだ。"
  logistics_of_khan:0 "ハンの兵站"
- logistics_of_khan_desc:0 "偉大なハンの征服が、優れた軍事力によるものであると同様、優れた兵站によるものであったことは忘れられている。我々は時代に合わせて最新のものとしながら、偉大なハンの技術を見習う必要がある。これにより、我々の征服の範囲が広がるだろう。"
+ logistics_of_khan_desc:0 "大ハーンの征服が、優れた軍事力によるものであると同様、優れた兵站によるものであったことは忘れられている。我々は時代に合わせて最新のものとしながら、大ハーンの技術を見習う必要がある。これにより、我々の征服の範囲が広がるだろう。"
  glory_of_conquest:0 "征服の栄光"
  glory_of_conquest_desc:0 "彼が我々の頑強な群れと共に最初に馬に乗ることが出来ない限り、少年は男にはなれないこと、彼が他の男の妻を汚すまで、彼は妻を得ることができないこと、彼が他のいずれかを焼き尽くすまで、彼は兵舎にふさわしくないことを知らしめよう。我々の軍隊への奉仕が男らしさへの唯一の道であるようにしよう。"
  theocracy_ideas:0 "神聖のアイデア"
@@ -5094,7 +5094,7 @@
  yua_pax_mongolica:0 "パクス・モンゴリカ"
  yua_pax_mongolica_desc:0 "モンゴル、中国、チベット、そして他のすべてにわたる大元帝国の平和は、かつてないほどの経済成長をもたらした。今、我々が元の遺産を取り戻したことで、我々もその名の期待に応え、国境の中のすべてを保護するべきだ。偉大なハーンと彼の親族の慈悲深い保護の下で、自由な交易を流通させよう。\n"
  yua_a_savage_kingdom_holy_and_enchanted:0 "神聖で魅惑的で野蛮な王国"
- yua_a_savage_kingdom_holy_and_enchanted_desc:0 "より弱い国家は我々を恐れ、我々を野蛮人と名付けている。しかし、彼らもまた我々のような強さを渇望し、我々の壮大さに息をのみ、自身の臆病さに溜息をつく。偉大なハンの激しさに優るものはおらず、我々は誇らしげに「野蛮人」の名を身に着けよう。\n"
+ yua_a_savage_kingdom_holy_and_enchanted_desc:0 "より弱い国家は我々を恐れ、我々を野蛮人と名付けている。しかし、彼らもまた我々のような強さを渇望し、我々の壮大さに息をのみ、自身の臆病さに溜息をつく。大ハーンの激しさに優るものはおらず、我々は誇らしげに「野蛮人」の名を身に着けよう。\n"
  yua_the_three_teachings_and_nine_schools_respected:0 "三教九流の厚遇"
  yua_the_three_teachings_and_nine_schools_respected_desc:0 "元帝国は単なる征服国家ではない。我々は臣民から学び、我々の統治をより良くするために努力する。中国哲学のすべての流派と分派は尊重されなければならない。我々は、これら巨匠の知恵を我々自身の糧として、その名にふさわしい帝国を維持し、拡大しなければならない。\n"
  yua_keshik_and_weijun:0 "ケシクと衛軍"
@@ -6949,22 +6949,22 @@
  fort_breaker_desc:0 "要塞は拡張主義国家にとって悩みの種である。たとえ兵士の命が奪われようとも、我々の勝利を阻む砦はない。\n「進め！この砦に突撃し、将軍のために征服するのだ！」"
  glory_on_the_battlefield:0 "栄光の探求者"
  glory_on_the_battlefield_desc:0 "昨今の戦争は、攻城戦をなし、敵地を占領することで勝利することがほとんどである。我々はそのようなことはしない！戦場で敵を探し出し、戦闘で倒すのだ！"
- until_the_last_man:0 "Until the Last Man Standing"
- until_the_last_man_desc:0 "A battle can only have one out of two outcomes: total victory or death. None of our soldiers will retreat as long a single man of the enemy side still stands."
- improved_body_armor:0 "Improved Body Protection"
- improved_body_armor_desc:0 "Although melee weapons are falling out of fashion, they are still prevalent nonetheless. Through improvements on the uniforms and the armor of our troops we can lessen the lethality of their melee weapons."
+ until_the_last_man:0 "最後の1人まで"
+ until_the_last_man_desc:0 "戦いの結果は、完全なる勝利か死、この2つに1つしかない。敵が一人でも残っている限り、我が軍の兵士は誰一人退くことはない。"
+ improved_body_armor:0 "胴体保護の改善"
+ improved_body_armor_desc:0 "近接武器は流行遅れになりつつあるが、それでもまだ普及している。軍服や鎧を改良することで、近接武器の殺傷能力を下げることができる。"
  terrain_defence:0 "地形防御"
  terrain_defence_desc:0 "開けた戦場では、兵士が銃弾を避けるためにできることはほとんどない。そのため、兵士は周囲の環境をよく観察し、地形を利用して敵の一斉射撃をかわさなくてはならない。"
- homeland_specialization:0 "Homeland Specialization"
- homeland_specialization_desc:0 "Through the precise and speciliazed training of our men, any fight on soil which resembles ours is a secured victory."
+ homeland_specialization:0 "本土専門"
+ homeland_specialization_desc:0 "兵士への正確で特殊な訓練によって、我が国と同じような土地での戦いは、確実に勝利することができる。"
  guerilla_warfare_defense:0 "遊撃戦"
  guerilla_warfare_defense_desc:0 "敵の戦力が圧倒的で、正面から戦えないこともある。それよりも、一撃離脱戦術を駆使して敵の力を弱め、その後に兵士が敵を倒す方が賢明である。"
- relentless_charge:0 "Relentless Charge"
- relentless_charge_desc:0 "No battle has been won by sitting around and waiting for the enemy to finish themselves off. Our army shall bring the battle to them, no matter how relentless we must charge into it."
- ditch_defense:0 "Ditch Defense"
- ditch_defense_desc:0 "As artillery sees greater improvements, it is obvious that our fortifications need to be upgraded. Through the usage of ditch defenses we can increase the efficiency of our defenders significantly."
- reinforcement_drafts:0 "Salvage our Equipment"
- reinforcement_drafts_desc:0 "Death is the fate of any loyal soldier, and no man can be brought back from the dead. However, the equipment these bodies drop on the battlefield can still be of use to us. By sending a unit to recover the weapons and uniforms from the battlefield, we can salvage these items and make equipping the next set of bodies more efficient."
+ relentless_charge:0 "無慈悲な突撃"
+ relentless_charge_desc:0 "座して敵が自壊するのを待つことで、勝利した戦いなどない。敵への突撃がどれだけ苛酷だろうと、奴らを戦いに引きずり込まなければならない。"
+ ditch_defense:0 "堀による防衛"
+ ditch_defense_desc:0 "大砲の改良が進むにつれて、要塞の改良が必要なのは明らかだ。堀を利用した防御により、防衛効率を大幅に向上させることができる。"
+ reinforcement_drafts:0 "自軍装備の回収"
+ reinforcement_drafts_desc:0 "死は忠実なる兵士の宿命であり、死から蘇らせることはできない。しかし、その死体が戦場に落とした装備は、まだ使える。戦場から武器や軍服を回収する部隊を派遣することで、回収し、次の肉体への装備をより効率化できる"
  the_british_parliament:0 "グレートブリテン議会"
  the_british_parliament_desc:0 "自国には議会主義の長い歴史があり、グレートブリテン議会の創設に伴い、イングランド議会とスコットランド議会の伝統を継承することはごくごく自然なことだ。"
  AVE_ideas:0 "アンジューのアイデア"
