--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -481,7 +481,7 @@
  anglican_innovativeness:0 "聖公会の革新性"
  desc_anglican_innovativeness:0 "英国国教会は、信仰と国家の栄光のために、思想と技術における新発見を奨励した。"
  expel_heretics_aspect:0 "§Y異端者の追放§!"
- desc_expel_heretics_aspect:0 "異端者は我々の宗教と文化にとって危険である。奴らを我が地から追放し、新大陸に送るべきだ。\n\n我々が植民州を領有している場合、その植民地は§G100§!の人口を獲得します。また、§Y15年間§!、入植可能性が§G5.0％§!、宗教統一度が§G10.0％§!増加します。\n§Y33％§!の確率で、その植民地は§Y異教§!の宗教のいずれかに適応します。"
+ desc_expel_heretics_aspect:0 "異端者は我々の宗教と文化にとって危険である。奴らを我が地から追放し、新大陸に送るべきだ。\n\n我々が植民州を領有している場合、その植民地は§G100§!の人口を獲得します。また、§Y15年間§!、入植可能性が§G5.0%§!、宗教統一度が§G10.0%§!増加します。\n§Y33%§!の確率で、その植民地は§Y異教§!の宗教のいずれかに適応します。"
  expel_heretics_aspect_tt:0 "ランダムで1つの領有する植民地が§G100§!の人口を獲得します。\n入植可能性と宗教統一度が増加します。"
  expelling_heretics:0 "異端者の追放"
  desc_expelling_heretics:0 "[Root.Monarch.GetTitle]の命は明確だ。異端を認める者は皆、火刑に処すか、遠隔地の植民地へ追放するものとする。"
