--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -210,7 +210,7 @@
  swe_forest_expansion_title:0 "森林部への拡張"
  swe_forest_expansion_desc:0 "スカンディナヴィアの森林部は、大半が未開の地だ。その地に住む狡猾なサーミ人を除けば、厳しい冬と資源不足のため、ほぼ住民のいない土地だ。\nしかし、森林部は毛皮のための絶好の狩場であり、中には鉄といった物が眠っているところもある。森林部に進出して、スカンディナヴィアの厳しい地域にさえも入植することは得策かもしれない。"
  swe_forest_expansion_tt:0 "§Yスカンディナヴィア§!内にある§Y森林§!や§Y林§!の全州が、§Y[Root.GetName]§!により領有されていて、開発度が§Y6§!以上である。"
- swe_forest_expansion_ct:0 "§Yスカンディナヴィア§!の領有州はすべて、繁栄の進捗§G+10.00％§!を獲得します。\n§Yスカンディナヴィア§!の領有州で気候が§Y北極圏§!である州はすべて、「§Y北極圏への拡大§!」をゲーム終了まで獲得し、以下の効果を得ます：\n州内開発コスト：§G-40.0%§!\n建設可能数：§G+1§!"
+ swe_forest_expansion_ct:0 "§Yスカンディナヴィア§!の領有州はすべて、繁栄の進捗§G+10.00%§!を獲得します。\n§Yスカンディナヴィア§!の領有州で気候が§Y北極圏§!である州はすべて、「§Y北極圏への拡大§!」をゲーム終了まで獲得し、以下の効果を得ます：\n州内開発コスト：§G-40.0%§!\n建設可能数：§G+1§!"
  swe_the_livonian_order_title:0 "東方への窓口"
  swe_the_livonian_order_desc:0 "エストニア、リヴォニア、クロニアの地は、バルト海の有力な地域であるが、東方化への窓口とも比喩される。東からの交易がその地を通って流れてくるからだ。\nエストニア人やラトビア人たちは認めたくないかもしれないが、東のロシア人に対しては全くの無力だ。彼らを守ることができるよう、自領に組み入れるべきだ。"
  swe_the_livonian_order_at:0 "§Y[38.GetName]§!州と§Yリヴォニア§!、§Yエストニア§!、§Yクロニア§!の州を§Y6§!州以上自国もしくは自国の属国で領有している。"
@@ -643,12 +643,12 @@
  TRADE_CONFLICT_TRIGGERED_WAR_NAME:0 "$ORDER$$FIRST$-$SECOND$交易紛争"
  cb_claim_norwegian_throne:0 "ノルウェー王位の請求"
  cb_claim_norwegian_throne_desc:0 "デーン人はもはやスカンディナヴィアの同胞を守るために信頼などできない。ノルウェー王位を救い、自身にその後継を請求することが我が責務である！"
- take_capital_norwegian_throne:0 "首都の占領"
+ take_capital_norwegian_throne:0 "首都を占領する"
  take_capital_norwegian_throne_desc:0 "戦争の目標は首都を占領することです。"
  NORWEGIAN_THRONE_WAR_NAME:0 "$ORDER$$FIRST$-$SECOND$のノルウェー王位に関する戦争"
  cb_imperial_ban_incident:0 "帝国の禁令"
  cb_imperial_ban_incident_desc:0 "奴らが占拠している州は帝国の一部だ。"
- take_capital_ban:0 "首都の占領"
+ take_capital_ban:0 "首都を占領する"
  take_capital_ban_desc:0 "戦争の目標は首都を占領することです。"
  cb_enforce_electorate_right:0 "選帝侯の請求"
  cb_enforce_electorate_right_desc:0 "自国の従属国は神聖ローマ帝国の選帝侯であるが、皇帝はこの役目を自国に譲ることを拒否している！"
@@ -918,10 +918,10 @@
  kalmar_union_events.1.t:0 "[Root.GetName]の新[Root.Monarch.GetTitle]"
  kalmar_union_events.1.desc:1 "[Root.Monarch.GetName]は[Root.Capital.GetName]で戴冠し、現在[Root.GetName]の[Root.Monarch.GetTitle]であり、またカルマル同盟全体の主君でもあります。\nしかし、スカンディナヴィアの同君連合も[Root.Monarch.GetName]を自身の正統支配者としても選出せねばなりません。そうでなければ、連合は崩壊の危機に瀕するかもしれません..."
  kalmar_union_events.1.a:0 "我が同君下位国は[Root.Monarch.GetName]を気に入ってくれることだろう。"
- kalmar_union_events.1.a.tt:1 "[Root.Monarch.GetName]は、同君下位国の貴族に追加特権を与えることなく、カルマル同盟を引き継ぎます。\nこのことは自国の同君下位国において§Y拒絶§!または§Y摂政§!選挙の結果を招くかもしれません。\nスカンディナヴィアの全同君下位国は、彼らの§Y[Root.Monarch.GetTitle]§!を選出することになります。\n\n独立欲求が90％以上である同君連合は常に[Root.Monarch.GetName]を拒絶する一方、独立欲求が10％未満である同君連合は常に我が支配者を彼らの[Root.Monarch.GetTitle]として選出します。"
+ kalmar_union_events.1.a.tt:1 "[Root.Monarch.GetName]は、同君下位国の貴族に追加特権を与えることなく、カルマル同盟を引き継ぎます。\nこのことは自国の同君下位国において§Y拒絶§!または§Y摂政§!選挙の結果を招くかもしれません。\nスカンディナヴィアの全同君下位国は、彼らの§Y[Root.Monarch.GetTitle]§!を選出することになります。\n\n独立欲求が90%以上である同君連合は常に[Root.Monarch.GetName]を拒絶する一方、独立欲求が10%未満である同君連合は常に我が支配者を彼らの[Root.Monarch.GetTitle]として選出します。"
  kalmar_union_events.1.b:0 "我が属国の貴族たちにさらなる特権を与えよ。"
  kalmar_union_events.1.b.tt:0 "§Y反抗的な§!スカンディナヴィアの同君連合国はすべて、補正「§Y貴族特権の付与§!」を§Y[Root.Monarch.GetName]・[Root.Monarch.Dynasty.GetName]§!が死亡するまで獲得し、以下の効果を得ます：\n国家の税補正：§G+10.0%§!\n貴族階級の忠誠均衡値：§G+10.0%§!\n貴族階級の影響力：§Y+10.0%§!\n独立欲求：§G-5.0%§!\n\nさらに、彼ら貴族は忠誠§G+15.0%§!を獲得する一方で、§Y[Root.GetName]§!は反抗的なスカンディナヴィアの同君連合ごとに[Root.GetNobilityOrFallbackName]の忠誠を§R10.0%§!失います。\n同君連合は§Y[Root.Monarch.GetName]・[Root.Monarch.Dynasty.GetName]§!を§Y[Root.Monarch.GetTitle]§!として選出しやすくなります。\nスカンディナヴィアの同君下位国は全て、自分の§Y[Root.Monarch.GetTitle]§!を選出することになります。"
- kalmar_union_events.1.c:1 "同君下位国が[Root.Monarch.GetName]を受け入れることを確認します。\n\n独立欲求が90％以上である同君連合は常に[Root.Monarch.GetName]を拒絶する一方、独立欲求が10％未満である同君連合は常に我が支配者を彼らの[Root.Monarch.GetTitle]として選出します。"
+ kalmar_union_events.1.c:1 "同君下位国が[Root.Monarch.GetName]を受け入れることを確認します。\n\n独立欲求が90%以上である同君連合は常に[Root.Monarch.GetName]を拒絶する一方、独立欲求が10%未満である同君連合は常に我が支配者を彼らの[Root.Monarch.GetTitle]として選出します。"
  kalmar_union_events.1.c.tt:0 "§Y反抗的な§!スカンディナヴィアの同君連合国は全て、補正「§Y広範な貴族特権の付与§!」を§Y[Root.Monarch.GetName]・[Root.Monarch.Dynasty.GetName]§!が死亡するまで獲得し、以下の効果を得ます：\n国家の税補正：§G+25.0%§!\n貴族階級の忠誠均衡値：§G+20.0%§!\n貴族階級の影響力：§Y+20.0%§!\n独立欲求：§G-15.0%§!\n\nさらに、彼ら貴族は忠誠§G+25.0%§!を獲得する一方で、§Y[Root.GetName]§!は反抗的なスカンディナヴィアの同君連合ごとに[Root.GetNobilityOrFallbackName]の忠誠を§R15.0%§!、正統性を§R10§!失います。\n同君連合は§Y[Root.Monarch.GetName]・[Root.Monarch.Dynasty.GetName]§!を§Y[Root.Monarch.GetTitle]§!としてかなり選出しやすくなります。\nスカンディナヴィアの同君下位国は全て、自分の§Y[Root.Monarch.GetTitle]§!を選出することになります。"
  kalmar_union_events.2.t:0 "[Root.GetName][Root.Monarch.GetTitle]の選挙"
  kalmar_union_events.2.desc:0 "前統治者の死去に伴い、新[From.Monarch.GetTitle]が[From.GetName]王位を継承しました。私たちはカルマル同盟の一員ですから、[From.Monarch.GetName]は正当に[Root.GetName][Root.Monarch.GetTitle]となっています。ただし、自国の[Root.GetNobilityOrFallbackName]によってまず選出されなければ、我が[Root.Monarch.GetTitle]として認知されません。"
@@ -1148,7 +1148,7 @@
  dan_a_danish_great_power_desc:0 "中世の小王国や地域大国の時代は終わった。その代わりに、世界的影響力を持つ大国が世界を動かしている。そういった大国に発展する宿敵に後塵を拝するなど許されない！"
  dan_a_danish_great_power_at:0 "自国とその朝貢国以外の従属国の開発度が§Y200§!以上の国家は、§Y[Root.GetName]§!から§Y影響§!を受ける。"
  dan_a_danish_great_power_bt:0 "知られている国家の内、§Y[Root.GetName]§!以上に自身とその朝貢国以外の従属国の合計開発度が高い国家が存在しない。"
- dan_a_danish_great_power_ct:0 "自身とその朝貢国以外の従属国の合計開発度が§Y200§!以上の国家は、§Y[Root.GetName]§!からその収入の§Y25％§!を補助を受ける。"
+ dan_a_danish_great_power_ct:0 "自身とその朝貢国以外の従属国の合計開発度が§Y200§!以上の国家は、§Y[Root.GetName]§!からその収入の§Y25%§!を補助を受ける。"
  dan_rival_england_title:0 "宿敵イングランド"
  dan_rival_england_desc:0 "西隣のイングランドは、ヨーロッパ最大の海軍国家の一つである。残念ながら、北海交易を支配しようとする両国の利害は、直接衝突している。"
  dan_trump_the_english_fleet_title:0 "イングランド海軍に挑め"
@@ -3248,7 +3248,7 @@
  livonian_nation_batlic_german_title:0 "リヴォニアの形成"
  livonian_nation_batlic_german_desc:0 "クロニア、リヴォニア、エストニアの地はかつてリヴォニア騎士団に属していた。もし騎士団が義務を果たせなくなった場合は、我々が代わりに繁栄とリヴォニアの勇気を導く案内役を務めるだろう。"
  sell_indulgence_title:0 "免罪符の売却"
- sell_indulgence_desc:0 "[From.GetName] @[From.GetTag]の[From.Monarch.GetTitle]の罪を悔い改めるために、免罪符を売却します。\n\n§Y[From.GetName]§!に免罪符を売却すると教皇への影響力を§Y50§!消費します。もし受諾されれば、[From.GetName]の§G3か月§!分の収入が§Y[Root.GetName]§!に支払われるのと引き換えに、安定度が§G1§!、威信が§G10§!増加します。\n\n§Y改革欲求が§R0.25%§!増加します。§!"
+ sell_indulgence_desc:0 "[From.GetName]@[From.GetTag] の[From.Monarch.GetTitle]の罪を悔い改めるために、免罪符を売却します。\n\n§Y[From.GetName]§!に免罪符を売却すると教皇への影響力を§Y50§!消費します。もし受諾されれば、[From.GetName]の§G3か月§!分の収入が§Y[Root.GetName]§!に支払われるのと引き換えに、安定度が§G1§!、威信が§G10§!増加します。\n\n§Y改革欲求が§R0.25%§!増加します。§!"
  sell_indulgence_tooltip:0 "彼を罪から解放するために免罪符を売却します。"
  sell_indulgence_dialog:0 "[This.GetName]が[Root.GetName]に免罪符の売却を提案しています。受諾すれば我が国の§R3か月§!分の収入と引き換えに、安定度§G1§!と威信§G10§!が増加するでしょう。\n\n§Y受諾すれば改革欲求が§R0.25%§!増加します。§!"
  sell_indulgence_alert_tooltip:0 "免罪符の売却を提案されました。"
@@ -4162,7 +4162,7 @@
  fin_white_death_descends_upon_europe:0 "ヨーロッパを襲う白い死"
  fin_finnish_militarization_modifier:0 "フィンランドの軍事化"
  fin_finnish_swedish_carolean:0 "カロリアン"
- fin_claim_swedish_provinces_tt:0 "衰退している者へ請求権をつける\n§Yスウェーデン王国§! @SWE"
+ fin_claim_swedish_provinces_tt:0 "衰退している者へ請求権をつける\n§Yスウェーデン王国§!@SWE"
  fin_cav_merc_company_tt:0 "\n傭兵団§Yフィン人のハッカペリター騎兵隊§!を使用可能にする"
  fin_if_cultural_union_tt:0 "§Y文化連合§!を行ってミッションを達成した場合："
  fin_iron_copper_prod_tt:0 "§Y銅§!または§Y鉄§!の生産から"
