--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -322,7 +322,7 @@
  CEP_ADJ:0 "コルフ"
  CHA_ADJ:1 "チャンパ"
  CHE_ADJ:0 "チェロキー"
- CHG_ADJ:0 "チャガタイ・ハーン国"
+ CHG_ADJ:0 "チャガタイ・ハン国"
  CHK_ADJ:0 "チャンパーサック"
  CHL_ADJ:0 "チリ"
  CHM_ADJ:0 "チムー"
