--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -47,30 +47,30 @@
  SLACKEN_AUTODISABLE_LOG:0 "募集基準の緩和は無効です。"
  SLACKEN_AUTODISABLE_BTN1:0 "OK"
  SLACKEN_AUTODISABLE_BTN2:0 "OK"
- SLACKEN_AUTODISABLE_BTN3:0 "Go to"
+ SLACKEN_AUTODISABLE_BTN3:0 "移動"
  ON_CONSTRUCTION_STARTED:0 "この建物の建築の開始によって、以下の効果が得られます："
  ON_CONSTRUCTION_CANCELED:0 "この建物の建築の中止によって、以下の効果が得られます："
  TRADE_FAVORS_FOR_TRUST_NOAMOUNT:0 "The favors amount cannot be $VAL|Y0$"
- MAPMODE_SCORCHED_EARTH:0 "Scorched Earth"
- MAPMODE_SCORCHED_EARTH_DESC:0 "Displays which Provinces have the Scorched Earth modifier."
- MAPMODE_IMPROVED_INFRASTRUCTURE:0 "Expanded Infrastructure"
- MAPMODE_IMPROVED_INFRASTRUCTURE_DESC:0 "Displays which Provinces had their infrastructure expanded."
- IMPROVED_INFRASTRUCTURE_MAP_TOOLTIP:0 "$PROVINCE|Y$ had its infrastructure expanded $AMOUNT$ times."
- SCORCHED_EARTH_MAP_TOOLTIP:0 "$PROVINCE|Y$ will have Scorched Earth until $DATE|Y$."
- NO_SCORCHED_EARTH_MAP_TOOLTIP:0 "$PROVINCE|Y$ doesn't have Scorched Earth."
- SET_POPE_DESC:0 "$COUNTRYNAME$ will become the Papal Controller."
- EFFECT_REMOVE_POWER_PROJECTION:0 "$TAG$ will lose $AMOUNT|R$ Power Projection."
- NO_CLAIM_COST_INCREASE:0 "Cost for additional claims is ignored due to our modifiers."
+ MAPMODE_SCORCHED_EARTH:0 "焦土"
+ MAPMODE_SCORCHED_EARTH_DESC:0 "焦土補正がある州が表示されます。"
+ MAPMODE_IMPROVED_INFRASTRUCTURE:0 "インフラの拡張"
+ MAPMODE_IMPROVED_INFRASTRUCTURE_DESC:0 "インフラが拡張された州が表示されます。"
+ IMPROVED_INFRASTRUCTURE_MAP_TOOLTIP:0 "$PROVINCE|Y$は$AMOUNT$回インフラが拡張されました。"
+ SCORCHED_EARTH_MAP_TOOLTIP:0 "$PROVINCE|Y$は$DATE|Y$まで焦土であり続けます。"
+ NO_SCORCHED_EARTH_MAP_TOOLTIP:0 "$PROVINCE|Y$は焦土になっていません。"
+ SET_POPE_DESC:0 "$COUNTRYNAME$が教皇の支配者になります。"
+ EFFECT_REMOVE_POWER_PROJECTION:0 "$TAG$は戦力投射を$AMOUNT|R$失います。"
+ NO_CLAIM_COST_INCREASE:0 "補正により追加請求コストが無視されます。"
  MODIFIER_NO_CLAIM_COST_INCREASEMENT:0 "追加請求コストなし"
  MODIFIER_NAVAL_MORALE_DAMAGE:0 "海軍士気ダメージ"
  MODIFIER_NAVAL_MORALE_DAMAGE_RECEIVED:0 "海軍被士気ダメージ"
  average_global_autonomy:0 "平均自治率"
  reverse_average_global_autonomy:0 "Reverse Average Autonomy"
- average_overseas_subject_liberty_desire:0 "Average Liberty Desire from Oversea Subjects"
+ average_overseas_subject_liberty_desire:0 "海外の従属国からの独立欲求平均"
  reverse_average_overseas_subject_liberty_desire:0 "Reverse Average Liberty Desire from Oversea Subjects"
- average_subject_liberty_desire:0 "Average Liberty Desire"
+ average_subject_liberty_desire:0 "独立欲求平均"
  reverse_average_subject_liberty_desire:0 "Reverse Average Liberty Desire"
- average_oversea_liberty_desire:0 "Average Overseas Liberty Desire"
+ average_oversea_liberty_desire:0 "海外の独立欲求平均"
  reverse_average_oversea_liberty_desire:1 "Reverse Average Overseas Liberty Desire"
  MODIFIER_HAS_TERCIO:0 "テルシオ歩兵が国内で利用可能になる"
  MODIFIER_HAS_MUSKETEER:0 "銃士歩兵が国内で利用可能になる"
