--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -899,7 +899,7 @@
  tribal_kingdom_desc:0 "大規模な部族社会が法律による支配を行う一人の強力な支配者によって王国を形成した政治構造である。"
  tribal_federation_desc:0 "一定の内部的な自治権を持つが、国家としては中央の権威が統治する、部族の連邦による政体である。"
  tribal_democracy_desc:0 "部族がどのように統治されるべきかについて、部族の全員が意見を述べ、影響を与えることが許される政体である。"
- tsardom_desc:0 "この国家は帝政ローマの遺産と正教会の支持者である。全ロシアのツァーリとして、我らが統治者は東スラヴ人民の真の支配者である。"
+ tsardom_desc:0 "この国家は帝政ローマの遺産と正教会の支持者である。全ルーシのツァーリとして、我らが統治者は東スラヴ人民の真の支配者である。"
  principality_desc:0 "この国家は、キエフの崩壊後数年間、そしてタタールの朝貢を求める遠征の絶え間ない侵入の圧力の下で進化した政府体制である。支配する一族は大きな権力を発揮することができるが、年功序列と皇位継承は長年の内部紛争へと繋がる可能性がある。"
  philosopher:0 "哲学者"
  natural_scientist:0 "自然科学者"
@@ -7227,7 +7227,7 @@
  desc_free_shipping_through_the_sound:0 "我々の船はもはや海峡通行料を支払う必要はない、我々の交易にとってはよいことだ。"
  HISTORY_OWNER_CHANGE:0 "§Y$NEW$§Wに併合される"
  HISTORY_DISCOVERED_BY:0 "§Y$GROUP$§W圏の§Y$DISCOVERER$§Wにより発見される"
- HISTORY_BUILDING_CONSTRUCTED:0 "§Y$BUILDING$§Wの建設される"
+ HISTORY_BUILDING_CONSTRUCTED:0 "§Y$BUILDING$§Wの建設が完了する"
  HISTORY_BUILDING_DEMOLISHED:0 "§Y$BUILDING$§Wが破壊される"
  HISTORY_TRADE_GOODS_CHANGE:0 "§Y$NEW$§Wとの交易が始まる"
  HISTORY_RELIGION_CHANGE:0 "古い信仰を捨て、§Y$RELIGION$§Wになる"
@@ -7988,7 +7988,7 @@
  tribal_federation_legacy_desc:0 "一定の内部的な自治権を持つが、国家としては中央の権威が統治する、部族の連邦による政体である。"
  tribal_democracy_legacy_desc:0 "部族がどのように統治されるべきかについて、部族の全員が意見を述べ、影響を与えることが許される政体である。"
  tsardom_legacy:0 "ツァーリ国"
- tsardom_legacy_desc:0 "この国家は帝政ローマの遺産と正教会の支持者である。全ロシアのツァーリとして、我らが統治者は東スラヴ人民の真の支配者である。"
+ tsardom_legacy_desc:0 "この国家は帝政ローマの遺産と正教会の支持者である。全ルーシのツァーリとして、我らが統治者は東スラヴ人民の真の支配者である。"
  principality_legacy:0 "公国"
  principality_legacy_desc:0 "この国家は、キエフの崩壊後数年間、そしてタタールの朝貢を求める遠征の絶え間ない侵入の圧力の下で進化した政府体制である。支配する一族は大きな権力を発揮することができるが、年功序列と皇位継承は長年の内部紛争へと繋がる可能性がある。"
  INSULTNEWDESC:1 "$COUNTRY|Y$を侮辱しますか？これは関係を$MODIFIER|R$悪化させ、彼らに我々に対する開戦事由を与えるでしょう。"
