--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1142,12 +1142,12 @@
  flavor_rus.EVTOPTA3411:0 "この恐ろしい侮辱のかたきを討つ。"
  flavor_rus.EVTOPTB3411:0 "反乱を鎮圧するのに利用する。"
  flavor_rus.EVTNAME3413:0 "大蔵省改革と給餌制度の廃止"
- flavor_rus.EVTDESC3413:0 "最も重要なロシアの政府改革のいくつかがイヴァン4世によって制定された。イヴァンはイヴァン3世の業績の上に築き上げ、代官（注：皇帝の臣下時にのみ与えられる領土を有した軍人・文官）階級を君主制にさらに密接に結びつけた。彼はまた、直接自由にできる財務局を別に創設し、資金の流入と流出に一定の効率をもたらした。給与が農民の手から直接「そのまま」支払われていた地方行政の支払制度である給餌制度の廃止と、地方行政組織の是正が、君主制をより一層効率的かつ強力なものにした。ロシアにとって不幸なことに、これらの改革は、イワン4世の治世末期、犠牲の多い悲惨なリヴォニア戦争後の国家を破産しないようにしておくには十分ではなかった。"
+ flavor_rus.EVTDESC3413:0 "最も重要なロシアの政府改革のいくつかがイヴァン4世によって制定された。イヴァンはイヴァン3世の業績の上に築き上げ、代官（注：皇帝の臣下時にのみ与えられる領土を有した軍人・文官）階級を君主制にさらに密接に結びつけた。彼はまた、直接自由にできる財務局を別に創設し、資金の流入と流出に一定の効率をもたらした。給与が農民の手から直接「そのまま」支払われていた地方行政の支払制度である給餌制度の廃止と、地方行政組織の是正が、君主制をより一層効率的かつ強力なものにした。ロシアにとって不幸なことに、これらの改革は、イヴァン4世の治世末期、犠牲の多い悲惨なリヴォニア戦争後の国家を破産しないようにしておくには十分ではなかった。"
  flavor_rus.EVTOPTA3413:0 "大蔵省を改革し、給餌を廃止する。"
  flavor_rus.EVTOPTB3413:0 "大蔵省を改革するだけにする。"
  flavor_rus.EVTOPTC3413:0 "給餌を廃止するだけにする。"
  flavor_rus.EVTNAME3415:0 "ロシア正教会の独立宣言"
- flavor_rus.EVTDESC3415:1 "ビザンツ帝国が崩壊して間もなく、ロシア教会は事実上、コンスタンティノープル総主教庁から独立していた。ロシア主教協議会によって任命された府主教ヨナは、モスクワおよび全ロシアの府主教の称号を与えられた。ロシア教会はロシア国家と結びつく代わりに、コンスタンティノープルから独立して以来、ますます成長してきている。"
+ flavor_rus.EVTDESC3415:1 "ビザンツ帝国が崩壊して間もなく、ロシア教会は事実上、コンスタンティノープル総主教庁から独立していた。ロシア主教協議会によって任命された府主教ヨナは、モスクワおよび全ルーシの府主教の称号を与えられた。ロシア教会はロシア国家と結びつく代わりに、コンスタンティノープルから独立して以来、ますます成長してきている。"
  flavor_rus.EVTOPTA3415:1 "真の信仰を[Root.Capital.GetCapitalName]から導こう。"
  flavor_rus.EVTOPTB3415:1 "同胞がコンスタンティノープルを取り戻すのを助けよう。"
  flavor_rus.EVTOPTC3415:0 "トルコ人からコンスタンティノープルを解放することが我らの宿命なのだ！"
