--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -6741,14 +6741,14 @@
  OVERLORD_CHANGED_TRIBUTE_BTN1:0 "OK"
  OVERLORD_CHANGED_TRIBUTE_BTN2:0 "OK"
  OVERLORD_CHANGED_TRIBUTE_BTN3:0 "移動"
- INVALID_TRADING_POLICY_TITLE:0 "交易政策が変更された！"
- INVALID_TRADING_POLICY_SETUP:0 "交易政策がもはや維持できず、デフォルトに変更されたとき"
+ INVALID_TRADING_POLICY_TITLE:0 "交易方針が変更された！"
+ INVALID_TRADING_POLICY_SETUP:0 "交易方針がもはや維持できず、デフォルトに変更されたとき"
  INVALID_TRADING_POLICY_HEADER:0 "商人からの報告"
- INVALID_TRADING_POLICY_1:0 "$OLD|Y$交易政策は"
+ INVALID_TRADING_POLICY_1:0 "交易方針$OLD|Y$は"
  INVALID_TRADING_POLICY_2:0 "$NAME|Y$において"
  INVALID_TRADING_POLICY_3:0 "もはや維持が困難であり、以降は"
  INVALID_TRADING_POLICY_4:0 "$NEW|Y$に変わります。"
- INVALID_TRADING_POLICY_LOG:0 "$NAME$の交易政策が変更"
+ INVALID_TRADING_POLICY_LOG:0 "$NAME$の交易方針が変更"
  INVALID_TRADING_POLICY_BTN1:0 "OK"
  INVALID_TRADING_POLICY_BTN2:0 "OK"
  INVALID_TRADING_POLICY_BTN3:0 "移動"
