--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -1044,7 +1044,7 @@
  reformer_state_reform_desc:0 "宗教改革の思想に次いで、富と交易が大きな役割を果たす神権国家である。自国の情熱はまた異端の地で宗教改革の言葉を説くために、自国商人を動機づける。"
  mechanic_mercs_do_not_cost_army_professionalism_yes:1 "傭兵団が§Y軍熟練度§!を消費しない"
  mechanic_no_stability_loss_on_monarch_death_yes:0 "統治者が死亡しても安定度が低下しない"
- mechanic_can_propogate_religion_yes:1 "交易政策「§Y宗教の伝播§!」を使用できる"
+ mechanic_can_propogate_religion_yes:1 "交易方針「§Y宗教の伝播§!」を使用可能"
  mechanic_can_spread_the_reformation_yes:1 "大航海時代及び宗教改革の時代中、「§Y宗教の伝播§!」を通して宗教改革を広げることができる"
  can_spread_reformation_tt:0 "大航海時代と宗教改革の時代の間に、§Y改革派§!を布教できる§Y宗教の伝播§!の使用を許可する"
  mechanic_can_sell_indulgences_yes:1 "カトリック国家に§Y免罪符§!を売却できる"
@@ -1146,7 +1146,7 @@
  dan_denmark_on_european_stage_ct:1 "§Y[Root.Capital.GetContinentName]§!大陸に首都があり、総開発度が§Y90§!以上である§Y[Root.GetName]§!の§Y同盟国§!が存在する。"
  dan_a_danish_great_power_title:0 "列強になれ"
  dan_a_danish_great_power_desc:0 "中世の小王国や地域大国の時代は終わった。その代わりに、世界的影響力を持つ大国が世界を動かしている。そういった大国に発展する宿敵に後塵を拝するなど許されない！"
- dan_a_danish_great_power_at:0 "自国とその朝貢国以外の従属国の開発度が§Y200§!以上の国家は、§Y[Root.GetName]§!から§Y影響§!を受ける。"
+ dan_a_danish_great_power_at:0 "自国とその朝貢国以外の従属国の開発度が§Y200§!以上の国家が、§Y[Root.GetName]§!から§Y影響§!を与えられている。"
  dan_a_danish_great_power_bt:0 "知られている国家の内、§Y[Root.GetName]§!以上に自身とその朝貢国以外の従属国の合計開発度が高い国家が存在しない。"
  dan_a_danish_great_power_ct:0 "自身とその朝貢国以外の従属国の合計開発度が§Y200§!以上の国家は、§Y[Root.GetName]§!からその収入の§Y25%§!を補助を受ける。"
  dan_rival_england_title:0 "宿敵イングランド"
@@ -2583,7 +2583,7 @@
  rig_improve_papal_relations_tt:0 "ミッション「§Yスウェーデン人との競争§!」及び「§Yリューベックでの交易上の存在感§!」を達成している場合、イベント「§Y仕事としての宗教§!」が発生します。"
  rig_establish_religious_dominance_title:0 "宗教改革の掌握"
  rig_establish_religious_dominance_desc:0 "キリスト教は転換期を迎えていた。改革派はヨーロッパで大きな影響力を持ち、かつて敬虔であった多くの人々が教皇庁に対し背を向けた。この新しいシスマの中で自身の立場を選ばなければならない、さもなければ国内で宗教戦争が巻き起こってしまうだろう。"
- rig_establish_religious_dominance_tt:0 "交易政策の§Y宗教の伝播§!について、ノード内での必要交易力が§Y15%§!で済むようになります。"
+ rig_establish_religious_dominance_tt:0 "交易方針§Y宗教の伝播§!について、ノード内での必要交易力が§Y15%§!で済むようになります。"
  rig_establish_religious_dominance_ct:0 "全異端国家に対して開戦事由§Y対異端戦争§!が使用可能になります。"
  rig_establish_religious_dominance_bt:0 "§Y[Root.GetName]§!によって強制改宗させられた§Y神聖ローマ帝国§!領邦であり、§Y[Root.Religion.GetName]§!である。"
  rig_defend_the_catholic_league_title:0 "宗教改革の完遂"
@@ -3604,7 +3604,7 @@
  free_trade_reform:0 "自由貿易の採用"
  free_trade_reform_desc:0 "世界中の商人が、私たちの土地に足を運び、我々の国民と交易や商業に携わることができるようにするべきだ。重商主義の狭量さを捨て、国家は外国の思想に接しやすくなる。"
  mechanic_monarch_power_on_institutions_yes:1 "制度を受容することで全君主力を§G100§!受け取るようになります"
- mechanic_free_improve_inland_routes_yes:1 "交易政策「§Y内陸ルートを改善§!」を使用するのに交易力が必要なくなります"
+ mechanic_free_improve_inland_routes_yes:1 "交易方針「§Y内陸ルートを改善§!」を使用するのに交易力が必要なくなります"
  lockean_proviso_reform:0 "ロック条項"
  lockean_proviso_reform_desc:0 "未使用の財産は、自然にとっても国家にとっても無駄である。長期間にわたって効用をもたらす硬貨を導入し、重視することによって、人々は自然の法則に反することなく、過剰に所有した物を交換に使用することができる。政府は、財産の蓄積と富の分配の間の対立を和らげるだろう。"
  embrace_the_economic_theory_reform:0 "経済理論の受容"
