--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -354,7 +354,7 @@
  majapahit_cb_2_tt:0 "技術グループが§Y中華§!技術グループの国家に対する開戦事由§Yマジャパヒト戦役§!を有効化"
  majapahit_cb_3_tt:0 "§Y全国家§!に対する開戦事由§Yマジャパヒト戦役§!を有効化"
  buddha_deity_tt:0 "個人の主神として§Yお釈迦様§!が開放されます"
- propagate_religion_maj_tt:0 "交易政策の§Y宗教の伝播§!が開放されます\n領有する州の内、宗教が§Yヒンドゥー教§!の州については、交易政策の§Y宗教の伝播§!の影響を受けなくなります"
+ propagate_religion_maj_tt:0 "交易方針§Y宗教の伝播§!が開放されます\n領有する州の内、宗教が§Yヒンドゥー教§!の州については、交易方針§Y宗教の伝播§!の影響を受けなくなります"
  maj_china_coast_claims_tt:0 "§Y[Root.GetName]§!は、§Y中国§!亜大陸にある§Y沿岸§!州全てに、恒久的な請求権を獲得します"
  VASSAL_MISSION_WAR_NAME_MAJ:0 "$SECOND_NAME$に対する$ORDER$$FIRST$軍事作戦"
  cb_vassalize_majapahit:0 "マジャパヒト戦役"
@@ -464,7 +464,7 @@
  desc_bli_colonies_modifier:0 "ロンボク島やスンバワ島にも王国を拡大しているが、もっと遠くに植民地を設立できない理由などどこにもない。"
  bli_majapahit_refugees:0 "マジャパヒト難民"
  desc_bli_majapahit_refugees:0 "マジャパヒトから貴族を迎え入れた。彼らは喜んで自国の宮廷に仕えてくれている。"
- atj_propagate_religion_tt:0 "交易政策の§Y宗教の伝播§!について、ノード内での必要交易力が§Y35%§!で済むようになります。"
+ atj_propagate_religion_tt:0 "交易方針§Y宗教の伝播§!について、ノード内での必要交易力が§Y35%§!で済むようになります。"
  atj_holy_war_cb_sumatra_tt:0 "主要文化が§Yスマトラ§!文化で§Y異教§!の国家に対する開戦事由§Yイスラムの剣§!を有効化"
  atj_holy_war_cb_java_tt:0 "主要文化が§Yジャワ§!文化か§Yスンダ§!文化で§Y異教§!の国家に対する開戦事由§Yイスラムの剣§!を有効化"
  atj_holy_war_cb_moluccas_tt:0 "主要文化が§Yスラウェシ§!文化か§Yモルッカ§!文化で§Y異教§!の国家に対する開戦事由§Yイスラムの剣§!を有効化"
