Save/Update files [ci skip]

--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -469,8 +469,8 @@
  abolish_the_mestnichestvo_desc:0 "門地制とは、血統に基づいて国政における役職を決定する制度である。しかし、この制度には問題があった。能力がないものが要職についてしまうことが多々あったのだ。この制度を廃止することで、我が国の官僚制度を強化することができるだろう。"
  siberian_frontier:0 "シベリアの開拓"
  siberian_frontier_desc:0 "シベリアの遠くの荒地が我々を呼んでいる。そこへの道をきれいにし、コサックを出発させ、ロシア国民のための土地をもたらせねばならない。"
- table_of_ranks:0 "序列表"
- table_of_ranks_desc:0 "門地制の廃止は国家の官僚主義をより能力主義的にしようとする最初の試みだった。序列表はこれを成文化し、軍隊のでの昇進を下位の階級での功績に基づき行うようにした。"
+ table_of_ranks:0 "階級表"
+ table_of_ranks_desc:0 "門地制の廃止は国家の官僚主義をより能力主義的にしようとする最初の試みだった。階級表はこれを成文化し、軍隊のでの昇進を下位の階級での功績に基づき行うようにした。"
  curriculum_of_the_cadet_corps:0 "軍幼年学校課程の拡張"
  curriculum_of_the_cadet_corps_desc:0 "我々は軍の将校より多くの士官候補生を抱えているので、将来の将校としてだけでなく、同じように科学者や技師に就くように士官候補部隊を利用すべきだ。"
  SPA_ideas:0 "スペインのアイデア"
@@ -6211,7 +6211,7 @@
  HIN_ideas_start:0 "ヒンドゥスターンの伝統"
  HIN_ideas_bonus:0 "ヒンドゥスターンの宿願"
  hin_sepahi:0 "シパーヒー"
- hin_sepahi_desc:0 "歩兵の重要性を軽視することはインドの多くの自称征服者が失墜する原因だった。我々のシパーヒー歩兵が最も効果的な銃器を身につけさせ、最も最新の戦術で訓練されるよう努めねばならない。"
+ hin_sepahi_desc:0 "歩兵の重要性を軽視することはインドの多くの自称征服者が失墜する原因だった。我々のスィパーヒー歩兵が最も効果的な銃器を身につけさせ、最も最新の戦術で訓練されるよう努めねばならない。"
  hin_indian_empire:0 "帝国のインドの野望"
  hin_indian_empire_desc:0 "ムスリムやヒンドゥー教徒、仏教徒、ジャイナ教徒、そのどの支配者もインド全体の征服に成功した者はいない。我々は最初の万能なるインド支配者となるであろう！"
  hin_peacock_throne:0 "孔雀の玉座"
@@ -7142,9 +7142,9 @@
  ideagroups.2011.d:0 "Our workers are reporting that our supplies for our constructions have run out. We must order the resources required for the buildings from outside."
  ideagroups.2011.a:0 "Oh no"
  ideagroups.2020.t:0 "[event_province.GetName]の発展鈍化"
- ideagroups.2020.d:0 "The city of [event_province.GetName] shows great potential to evolve into one of the [Root.GovernmentName]'s jewels. However, even the greatest capacity for development does not spare a province from complications. The burghers of [event_province.GetName] are lacking the means to promote the expansion of their place due to the lack of administration."
- ideagroups.2020.a:0 "Their city can wait"
- ideagroups.2020.b:0 "Invest in their development"
+ ideagroups.2020.d:0 "[event_province.GetName]市は、[Root.GovernmentName]の宝石の1つに進化する大きな潜在性を秘めている。しかし、どんなに素晴らしい発展能力を持つ州であっても、複雑な事態を免れることはできない。[event_province.GetName]の住民は、行政の不備により、自分たちの居場所の拡張を促進する手段を欠いている。"
+ ideagroups.2020.a:0 "待てるだろう。"
+ ideagroups.2020.b:0 "開発に努力を注げ。"
  ideagroups.2021.t:0 "[Root.Capital.GetRegionName]での好景気"
  ideagroups.2021.d:0 "[Root.Capital.GetRegionName]; the very home of our capital and heart of our [Root.GovernmentName] is going through a period of wealth and prosperity. We can use this opportunity to promote the economical boom of the entire region."
  ideagroups.2021.a:0 "A great time to live in [Root.Capital.GetRegionName]"
@@ -7158,10 +7158,10 @@
  ideagroups.2007.a:0 "Ensure that these newcomers pay their taxes"
  ideagroups.2007.b:0 "This will be a boon to the local production"
  ideagroups.2007.c:0 "More manpower is always welcome"
- ideagroups.2008.t:0 "Administrative Challenges"
- ideagroups.2008.d:0 "As the metropolises of our [Root.GovernmentName] grow, so do the administrative challenges the state has to face. Management of the more and more powerful cities requires bureaucratic attention, which can not be used to administrate new territory."
- ideagroups.2008.a:0 "Just a temporary problem"
- ideagroups.2008.b:0 "Invest into our offices"
+ ideagroups.2008.t:0 "統治上の課題"
+ ideagroups.2008.d:0 "[Root.GovernmentName]の大都市が成長するにつれて、国家が直面しなければならない統治上の課題も増えている。より強力になった都市の管理には、官僚の注意が必要で、新たな領土の統治に目を向けることはできない。"
+ ideagroups.2008.a:0 "所詮一時的な問題だ。"
+ ideagroups.2008.b:0 "事務局に投資しろ。"
  ideagroups.2009.t:0 "Good City Management"
  ideagroups.2009.d:0 "The burghers of our cities have expressed their gratitude towards us for our good management of their cities."
  ideagroups.2009.a:0 "The people are happy"
